Calculator2/src/calcul.output
Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statements SEMI statement
    3           | statements NL statement
    4           | statement

    5 statement: IDENT ASSIGN expression
    6          | PRINT expression
    7          | /* empty */

    8 expression: expression '+' term1
    9           | expression '-' term1
   10           | term

   11 term: term '*' factor1
   12     | term '/' factor1
   13     | factor

   14 term1: term1 '*' factor1
   15      | term1 '/' factor1
   16      | factor1

   17 factor: '(' expression ')'
   18       | '-' '(' expression ')'
   19       | IDENT
   20       | '-' IDENT
   21       | NUM
   22       | '-' NUM

   23 factor1: '(' expression ')'
   24        | IDENT
   25        | NUM


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 23
')' (41) 17 18 23
'*' (42) 11 14
'+' (43) 8
'-' (45) 9 18 20 22
'/' (47) 12 15
error (256)
NUM (258) 21 22 25
IDENT (259) 5 19 20 24
PRINT (260) 6
ASSIGN (261) 5
SEMI (262) 2
NL (263) 3
UMINUS (264)


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
program (17)
    on left: 1, on right: 0
statements (18)
    on left: 2 3 4, on right: 1 2 3
statement (19)
    on left: 5 6 7, on right: 2 3 4
expression (20)
    on left: 8 9 10, on right: 5 6 8 9 17 18 23
term (21)
    on left: 11 12 13, on right: 10 11 12
term1 (22)
    on left: 14 15 16, on right: 8 9 14 15
factor (23)
    on left: 17 18 19 20 21 22, on right: 13
factor1 (24)
    on left: 23 24 25, on right: 11 12 14 15 16


state 0

    0 $accept: . program $end

    IDENT  shift, and go to state 1
    PRINT  shift, and go to state 2

    $default  reduce using rule 7 (statement)

    program     go to state 3
    statements  go to state 4
    statement   go to state 5


state 1

    5 statement: IDENT . ASSIGN expression

    ASSIGN  shift, and go to state 6


state 2

    6 statement: PRINT . expression

    NUM    shift, and go to state 7
    IDENT  shift, and go to state 8
    '-'    shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 11
    term        go to state 12
    factor      go to state 13


state 3

    0 $accept: program . $end

    $end  shift, and go to state 14


state 4

    1 program: statements .
    2 statements: statements . SEMI statement
    3           | statements . NL statement

    SEMI  shift, and go to state 15
    NL    shift, and go to state 16

    $default  reduce using rule 1 (program)


state 5

    4 statements: statement .

    $default  reduce using rule 4 (statements)


state 6

    5 statement: IDENT ASSIGN . expression

    NUM    shift, and go to state 7
    IDENT  shift, and go to state 8
    '-'    shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 17
    term        go to state 12
    factor      go to state 13


state 7

   21 factor: NUM .

    $default  reduce using rule 21 (factor)


state 8

   19 factor: IDENT .

    $default  reduce using rule 19 (factor)


state 9

   18 factor: '-' . '(' expression ')'
   20       | '-' . IDENT
   22       | '-' . NUM

    NUM    shift, and go to state 18
    IDENT  shift, and go to state 19
    '('    shift, and go to state 20


state 10

   17 factor: '(' . expression ')'

    NUM    shift, and go to state 7
    IDENT  shift, and go to state 8
    '-'    shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 21
    term        go to state 12
    factor      go to state 13


state 11

    6 statement: PRINT expression .
    8 expression: expression . '+' term1
    9           | expression . '-' term1

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23

    $default  reduce using rule 6 (statement)


state 12

   10 expression: term .
   11 term: term . '*' factor1
   12     | term . '/' factor1

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25

    $default  reduce using rule 10 (expression)


state 13

   13 term: factor .

    $default  reduce using rule 13 (term)


state 14

    0 $accept: program $end .

    $default  accept


state 15

    2 statements: statements SEMI . statement

    IDENT  shift, and go to state 1
    PRINT  shift, and go to state 2

    $default  reduce using rule 7 (statement)

    statement  go to state 26


state 16

    3 statements: statements NL . statement

    IDENT  shift, and go to state 1
    PRINT  shift, and go to state 2

    $default  reduce using rule 7 (statement)

    statement  go to state 27


state 17

    5 statement: IDENT ASSIGN expression .
    8 expression: expression . '+' term1
    9           | expression . '-' term1

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23

    $default  reduce using rule 5 (statement)


state 18

   22 factor: '-' NUM .

    $default  reduce using rule 22 (factor)


state 19

   20 factor: '-' IDENT .

    $default  reduce using rule 20 (factor)


state 20

   18 factor: '-' '(' . expression ')'

    NUM    shift, and go to state 7
    IDENT  shift, and go to state 8
    '-'    shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 28
    term        go to state 12
    factor      go to state 13


state 21

    8 expression: expression . '+' term1
    9           | expression . '-' term1
   17 factor: '(' expression . ')'

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    ')'  shift, and go to state 29


state 22

    8 expression: expression '+' . term1

    NUM    shift, and go to state 30
    IDENT  shift, and go to state 31
    '('    shift, and go to state 32

    term1    go to state 33
    factor1  go to state 34


state 23

    9 expression: expression '-' . term1

    NUM    shift, and go to state 30
    IDENT  shift, and go to state 31
    '('    shift, and go to state 32

    term1    go to state 35
    factor1  go to state 34


state 24

   11 term: term '*' . factor1

    NUM    shift, and go to state 30
    IDENT  shift, and go to state 31
    '('    shift, and go to state 32

    factor1  go to state 36


state 25

   12 term: term '/' . factor1

    NUM    shift, and go to state 30
    IDENT  shift, and go to state 31
    '('    shift, and go to state 32

    factor1  go to state 37


state 26

    2 statements: statements SEMI statement .

    $default  reduce using rule 2 (statements)


state 27

    3 statements: statements NL statement .

    $default  reduce using rule 3 (statements)


state 28

    8 expression: expression . '+' term1
    9           | expression . '-' term1
   18 factor: '-' '(' expression . ')'

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    ')'  shift, and go to state 38


state 29

   17 factor: '(' expression ')' .

    $default  reduce using rule 17 (factor)


state 30

   25 factor1: NUM .

    $default  reduce using rule 25 (factor1)


state 31

   24 factor1: IDENT .

    $default  reduce using rule 24 (factor1)


state 32

   23 factor1: '(' . expression ')'

    NUM    shift, and go to state 7
    IDENT  shift, and go to state 8
    '-'    shift, and go to state 9
    '('    shift, and go to state 10

    expression  go to state 39
    term        go to state 12
    factor      go to state 13


state 33

    8 expression: expression '+' term1 .
   14 term1: term1 . '*' factor1
   15      | term1 . '/' factor1

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 8 (expression)


state 34

   16 term1: factor1 .

    $default  reduce using rule 16 (term1)


state 35

    9 expression: expression '-' term1 .
   14 term1: term1 . '*' factor1
   15      | term1 . '/' factor1

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 9 (expression)


state 36

   11 term: term '*' factor1 .

    $default  reduce using rule 11 (term)


state 37

   12 term: term '/' factor1 .

    $default  reduce using rule 12 (term)


state 38

   18 factor: '-' '(' expression ')' .

    $default  reduce using rule 18 (factor)


state 39

    8 expression: expression . '+' term1
    9           | expression . '-' term1
   23 factor1: '(' expression . ')'

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    ')'  shift, and go to state 42


state 40

   14 term1: term1 '*' . factor1

    NUM    shift, and go to state 30
    IDENT  shift, and go to state 31
    '('    shift, and go to state 32

    factor1  go to state 43


state 41

   15 term1: term1 '/' . factor1

    NUM    shift, and go to state 30
    IDENT  shift, and go to state 31
    '('    shift, and go to state 32

    factor1  go to state 44


state 42

   23 factor1: '(' expression ')' .

    $default  reduce using rule 23 (factor1)


state 43

   14 term1: term1 '*' factor1 .

    $default  reduce using rule 14 (term1)


state 44

   15 term1: term1 '/' factor1 .

    $default  reduce using rule 15 (term1)
